tests/fixtures/errors/generic_union_unknown_arg.z
# E0400: an unknown type argument on a generic union subtype construction.
MyOption: union {
    some: t
    none: null
} as { t: Any.generic }
main: function is {
    x: MyOption.some bogus: 1
}
